--- a/nysm.css
+++ b/nysm.css
@@ -6,43 +6,15 @@ body {
     color:white;
     background-color:black;
     font:20px sans-serif;
+    margin-left:15px
 }
 
-.wrap {
+.grid {
     overflow:hidden;
     margin:10px;
 }
 
-.box {
-    float:left;
-    position:relative;
-    width:20%;
-    padding-bottom:20%;
+.upload {
+    margin-left:20px;
 }
 
-.boxInner {
-    position:absolute;
-    left:10px;
-    right:10px;
-    top:10px;
-    bottom:10px;
-    overflow:hidden;
-}
-
-.boxInner img {
-    width:100%;
-}
-
-.boxInner .titleBox {
-    position:absolute;
-    margin-bottom:-10px;
-    background:#000;
-    background:rgba(0,0,0,0.5);
-    color:#FFF;
-    padding:10px;
-    text-align:center;
-    -webkit-transition:all 0.3s ease-out;
-    -moz-transition:all 0.3s ease-out;
-    -o-transition:all 0.3s ease-out;
-    transition:all 0.3s ease-out;
-}
